# codnia

./: .gitignore  AGENTS.md  CHANGELOG.md  Codnia.entitlements  Info.plist  LICENSE  PLAN.md  Package.resolved  Package.swift  README.md  SPEC.md  appcast.xml  mockup.html  run.sh
.build/: build.db  debug.yaml  plugin-tools.yaml
.build/arm64-apple-macosx/debug/: description.json  plugin-tools-description.json
.build/plugins/cache/: GenerateDoccReference  GenerateDoccReference-state.json  GenerateManual  GenerateManual-state.json
Codnia/Sources/Codnia/: CodniaApp.swift
Sources/Codnia/: CodniaApp.swift  Info.plist  icon.icns
Sources/Codnia/Components/: DraggableDivider.swift  HorizontalResizableDivider.swift  JSONBodyEditor.swift  ResizableDivider.swift  SQLTextEditor.swift  TitlebarBackgroundView.swift  WindowDragArea.swift
Sources/Codnia/Extensions/: Color+Theme.swift  DatabaseType+Logo.swift
Sources/Codnia/Models/: BrowserBookmark.swift  BrowserCSSStyle.swift  BrowserConsoleEntry.swift  BrowserDOMNode.swift  CodTheme.swift  (+21 more)
Tests/CodniaTests/: CodniaTests.swift
frontend/: index.html  package-lock.json  package.json  settings.html  vite.config.ts
frontend/src/: App.tsx  editor.ts  globals.css  main.tsx  settings-page.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/core/: file_system.rs  marketplace.rs  mod.rs  persistence.rs  preview.rs  search.rs  settings.rs  terminal.rs  workspace.rs
src-tauri/src/core/plugins/: host.rs  manifest.rs  mod.rs
(+784 files in other folders)
