[package]
name = "codnia"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-utils = { version = "2.6", features = ["build"] }
tauri-build = "2.6"

[dependencies]
tauri = { version = "2.6", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "6.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"