[package]
name = "codnia"
version = "0.2.3"
edition = "2021"

[build-dependencies]
tauri-utils = { version = "2.6", features = ["build"] }
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.6", features = ["devtools"] }
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "6.0"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
fs_extra = "1"
notify = "6"
portable-pty = "0.8"
pulldown-cmark = "0.9"
toml = "0.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
